--- a/src/app/pages/product/product-page/product-page.component.html
+++ b/src/app/pages/product/product-page/product-page.component.html
@@ -1,2 +1,20 @@
-<p>product-page works!</p>
-<app-product-view-card></app-product-view-card>
+<div class="container">
+    <div class="row">
+      <div class="col-12 col-sm-6 col-md-4 col-lg-3 inner">
+        <app-product-view-card routerLink="/product-details/P-001"></app-product-view-card>
+      </div>
+      <div class="col-12 col-sm-6 col-md-4 col-lg-3 inner">
+        <app-product-view-card routerLink="/product-details/P-001"></app-product-view-card>
+      </div>
+      <div class="col-12 col-sm-6 col-md-4 col-lg-3 inner">
+        <app-product-view-card routerLink="/product-details/P-001"></app-product-view-card>
+      </div>
+      <div class="col-12 col-sm-6 col-md-4 col-lg-3 inner">
+        <app-product-view-card routerLink="/product-details/P-001"></app-product-view-card>
+      </div>
+      <div class="col-12 col-sm-6 col-md-4 col-lg-3 inner">
+        <app-product-view-card routerLink="/product-details/P-001"></app-product-view-card>
+      </div>
+    </div>
+  </div>
+  
